2012-02-01 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-tokens.c (execute_action_command): Parse working dir.

	* src/api/na-iduplicable.h:
	* src/core/na-iduplicable.c (copy, na_iduplicable_duplicate):
	* src/api/na-object-api.h (na_object_duplicate):
	* src/api/na-object.h (copy):
	* src/core/na-object.c (iduplicable_copy):
	* src/core/na-object-item.c (object_copy, copy_children): Add a 'mode' argument.

	* src/nact/nact-clipboard.c
	(nact_clipboard_primary_set, nact_clipboard_primary_get):
	* src/nact/nact-menubar-edit.c (nact_menubar_edit_on_duplicate):
	* src/nact/nact-menubar-file.c (nact_menubar_file_save_items):
	* src/nact/nact-tree-model-dnd.c (drop_inside):
	* src/nact/nact-tree-model.c (nact_tree_model_fill): Updated accordingly.

2012-01-30 Pierre Wieser <pwieser@trychlos.org>

	* src/plugin-tracker/na-tracker.c:
	* src/utils/nautilus-actions-run.c:
	* tools/dbus-introspect.sh: Instanciate an object below the rooted
	manager.

	* docs/reference/nautilus-actions-docs.xml: Add new symbols for 3.2.

	* src/nact/nact-tree-model.c: Define window, treeview and mode properties.
	(instance_constructed): Initialize DnD interface.
	(instance_dispose): Clear the GtkTreeStore.

	* po/POTFILES.in: Updated accordingly.

	* src/nact/nact-main-window.c: Instanciate a window, not an application.

	* src/nact/nact-tree-model-dnd.c: Debug NactTreeModel reference count.

	* src/nact/nact-tree-model-priv.h: Get rid of WINDOW_DATA_TREE_MODEL data.

	* src/nact/nact-tree-view.c (instance_dispose): No more clear the store.

	* src/core/na-data-boxed.c (instance_init, instance_finalize):
	* src/core/na-object-id.c (instance_dispose):
	* src/core/na-object.c (instance_init, instance_dispose,
	instance_finalize): Remove some too verbose debug messages.

	* src/nact/base-window.c:
	* src/nact/base-window.h: Define a new BASE_PROP_DESTROY_ON_DISPOSE property.
	When set, the underlying Gtk toplevel is destroyed when the BaseWindow is
	unreffed.
